--- a/scripts/package.json
+++ b/scripts/package.json
@@ -118,7 +118,6 @@
   "dependencies": {
     "electron-updater": "^5.0.0",
     "fs-extra": "^10.1.0",
-    "fs.promises": "^0.1.2",
-    "fsevents": "^2.3.2"
+    "fs.promises": "^0.1.2"
   }
 }
