--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,8 @@
   "copyright": "© 2022, TimeChain.Academy",
   "main": "main.build.js",
   "dependencies": {
-    "@beaker/dat-serve-resolve-path": "^1.0.0",
-    "@beaker/library-tools": "^1.0.0",
+    "@beaker/dat-serve-resolve-path": "git+https://github.com/timechain-academy/dat-serve-resolve-path.git",
+    "@beaker/library-tools": "git+https://github.com/timechain-academy/library-tools.git",
     "@cliqz/adblocker": "^1.17.0",
     "abort-controller": "^3.0.0",
     "ajv": "^6.10.2",
@@ -87,7 +87,7 @@
     "slugify": "^1.3.5",
     "speedometer": "^1.0.0",
     "split2": "^2.2.0",
-    "sqlite3": "^5.1.2",
+    "sqlite3": "^4.1.0",
     "stream-throttle": "^0.1.3",
     "streamx": "^2.6.0",
     "textextensions": "^2.5.0",
@@ -98,5 +98,8 @@
     "winston": "github:winstonjs/winston#b4ced895b3e1ead8a616590189b003cfd9d7acca",
     "yazl": "^2.5.1",
     "yo-yo": "^1.4.0"
+  },
+  "devDependencies": {
+    "electron": "^13.0.0"
   }
 }
