app:scripts: update package.json package-lock.json

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -11,8 +11,9 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "fs-jetpack": "^1.2.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-batch": "^1.0.5",
+    "gulp-cli": "^2.3.0",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-util": "^3.0.6",
@@ -116,9 +117,10 @@
   },
   "homepage": "https://timechain.academy/",
   "dependencies": {
+    "@electron/asar": "^3.2.2",
     "electron-updater": "^5.0.0",
     "fs-extra": "^10.1.0",
     "fs.promises": "^0.1.2",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^5.1.2"
   }
 }
