--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@beaker/dat-serve-resolve-path": "git+https://github.com/timechain-academy/dat-serve-resolve-path.git",
     "@beaker/library-tools": "git+https://github.com/timechain-academy/library-tools.git",
     "@cliqz/adblocker": "^1.17.0",
+    "@electron/asar": "^3.2.2",
     "abort-controller": "^3.0.0",
     "ajv": "^6.10.2",
     "anymatch": "^2.0.0",
@@ -87,7 +88,7 @@
     "slugify": "^1.3.5",
     "speedometer": "^1.0.0",
     "split2": "^2.2.0",
-    "sqlite3": "^4.1.0",
+    "sqlite3": "^5.1.2",
     "stream-throttle": "^0.1.3",
     "streamx": "^2.6.0",
     "textextensions": "^2.5.0",
@@ -100,6 +101,7 @@
     "yo-yo": "^1.4.0"
   },
   "devDependencies": {
-    "electron": "^13.0.0"
+    "electron": "^13.0.0",
+    "gulp": "^4.0.2"
   }
 }
