--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,32 +1,32 @@
 {
   "name": "timechain.academy",
   "devDependencies": {
-    "browserify": "^16.0.0",
-    "electron": "13.0.0",
-    "electron-builder": "^22.6.0",
-    "electron-notarize": "^0.3.0",
-    "eslint": "^4.5.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "fs-jetpack": "^1.2.0",
-    "gulp": "^4.0.2",
-    "gulp-batch": "^1.0.5",
-    "gulp-cli": "^2.3.0",
-    "gulp-less": "^4.0.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "into-stream": "^2.0.1",
-    "pre-commit": "^1.2.2",
-    "q": "^1.4.1",
-    "rollup": "^1.23.0",
-    "yargs": "^4.2.0"
+    "browserify": "16.0.0",
+    "electron": "10.4.7",
+    "electron-builder": "22.6.0",
+    "electron-notarize": "0.3.0",
+    "eslint": "4.5.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-node": "5.1.1",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "3.0.1",
+    "fs-jetpack": "1.2.0",
+    "gulp": "4.0.2",
+    "gulp-batch": "1.0.5",
+    "gulp-cli": "2.3.0",
+    "gulp-less": "4.0.1",
+    "gulp-plumber": "1.1.0",
+    "gulp-util": "3.0.6",
+    "gulp-watch": "4.3.5",
+    "into-stream": "2.0.1",
+    "pre-commit": "1.2.2",
+    "q": "1.4.1",
+    "rollup": "1.23.0",
+    "yargs": "4.2.0"
   },
   "optionalDependencies": {
-    "appdmg": "^0.4.5",
-    "rcedit": "^0.5.0"
+    "appdmg": "0.4.5",
+    "rcedit": "0.5.0"
   },
   "build": {
     "afterSign": "./afterSignHook.js",
@@ -117,10 +117,19 @@
   },
   "homepage": "https://timechain.academy/",
   "dependencies": {
-    "@electron/asar": "^3.2.2",
-    "electron-updater": "^5.0.0",
-    "fs-extra": "^10.1.0",
-    "fs.promises": "^0.1.2",
-    "sqlite3": "^5.1.2"
+    "@electron/asar": "3.2.2",
+    "electron-updater": "5.0.0",
+    "encoding": "0.1.13",
+    "fs-extra": "10.1.0",
+    "fs.promises": "0.1.2",
+    "ipv4-peers": "2.0.0",
+    "knex": "0.20.0",
+    "mssql": "6.1.0",
+    "mysql": "2.18.1",
+    "mysql2": "2.1.0",
+    "pg": "7.18.2",
+    "semver": "7.3.8",
+    "sqlite3": "4.1.1",
+    "xor-distance": "2.0.0"
   }
 }
