package.json: no @^

--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "icojs": "0.12.3",
     "iconv": "3.0.1",
     "identify-filetype": "1.0.0",
+    "install": "0.13.0",
     "into-stream": "3.1.0",
     "isomorphic-git": "1.7.4",
     "keyboardevent-from-electron-accelerator": "1.1.0",
@@ -80,6 +81,7 @@
     "node-fetch": "2.6.1",
     "node-gyp": "8.4.1",
     "normalize-url": "3.3.0",
+    "npm": "9.1.2",
     "once": "1.4.0",
     "os-locale": "3.1.0",
     "os-name": "2.0.1",
@@ -95,6 +97,7 @@
     "re2": "1.17.7",
     "recursive-watch": "1.1.4",
     "rimraf": "2.6.3",
+    "run-series": "1.1.9",
     "scoped-fs": "1.4.1",
     "semver": "7.3.8",
     "slugify": "1.3.5",
