--- a/app/bg/dat/converter/package.json
+++ b/app/bg/dat/converter/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@beaker/dat-legacy-tools": "1.1.0",
+    "is-arrayish": "0.2.1",
     "re2": "1.17.2",
     "url-regex-safe": "3.0.0"
   }
