--- a/scripts/package.json
+++ b/scripts/package.json
@@ -127,6 +127,7 @@
     "mssql": "6.1.0",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
+    "node-pre-gyp": "0.17.0",
     "pg": "7.18.2",
     "semver": "7.3.8",
     "sqlite3": "4.1.1",
