--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,7 +2,7 @@
   "name": "timechain.academy",
   "devDependencies": {
     "browserify": "16.0.0",
-    "electron": "10.4.7",
+    "electron": "^10.4.7",
     "electron-builder": "22.6.0",
     "electron-notarize": "0.3.0",
     "eslint": "4.5.0",
@@ -11,7 +11,7 @@
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "fs-jetpack": "1.2.0",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-batch": "1.0.5",
     "gulp-cli": "2.3.0",
     "gulp-less": "4.0.1",
@@ -123,13 +123,14 @@
     "fs-extra": "10.1.0",
     "fs.promises": "0.1.2",
     "ipv4-peers": "2.0.0",
-    "knex": "0.20.0",
-    "mssql": "6.1.0",
-    "mysql": "2.18.1",
-    "mysql2": "2.1.0",
-    "pg": "7.18.2",
+    "knex": "^0.20.0",
+    "mssql": "^6.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "node-pre-gyp": "^0.17.0",
+    "pg": "^7.18.2",
     "semver": "7.3.8",
-    "sqlite3": "4.1.1",
+    "sqlite3": "^4.1.1",
     "xor-distance": "2.0.0"
   }
 }
