--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -26,6 +26,12 @@ jobs:
     - name: make
       run: |
         make
+        make help
+        make init
+
+    - name: make
+      run: |
+        make nvm
 
     - name: make install
       run: |
