.github/workflows/npm-gulp.yml: make build rebuild

--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -39,7 +39,15 @@ jobs:
 
     - name: make build
       run: |
-        make build
+        make   build
+
+    - name: make rebuild
+      run: |
+        make rebuild
+
+    - name: make start
+      run: |
+        make start
 
     - name: npm install
       run: |
