--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "podman-desktop",
-  "productName": "Podman Desktop",
-  "repository": "https://github.com/containers/podman-desktop",
+  "name": "timechain.academy",
+  "productName": "TimeChain.Academy",
+  "repository": "https://github.com/timechain-academy/timechain.academy",
   "version": "0.11.0-next",
   "license": "apache-2.0",
   "type": "module",
