--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "binary-extensions": "^1.13.1",
     "bytes": "^3.1.0",
     "circular-append-file": "^1.0.1",
+    "cjs": "0.0.11",
     "concat-stream": "^1.6.2",
     "cross-fetch": "^3.0.5",
     "dat-dns": "^3.2.1",
