--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "got": "^12.5.3",
     "hpagent": "^1.2.0",
     "moment": "^2.29.4",
+    "node-releases": "^2.0.10",
     "os-locale": "^6.0.2",
     "stream-json": "^1.7.5",
     "tar-fs": "^2.1.1",
